Se creó con Colab

--- a/Tarea_1.ipynb
+++ b/Tarea_1.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "hfEl2sNqjy46"
       },
@@ -105,27 +105,10 @@
       ],
       "metadata": {
         "id": "BikeWkWA5t4b",
-        "collapsed": true,
-        "outputId": "88ec14df-d6fe-4d2b-84c4-f69178607504",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "collapsed": true
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49] [101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149]\n",
-            "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24\n",
-            " 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48\n",
-            " 49] [101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118\n",
-            " 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136\n",
-            " 137 138 139 140 141 142 143 144 145 146 147 148 149]\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -154,24 +137,10 @@
       ],
       "metadata": {
         "id": "yVU8xCTBniE1",
-        "collapsed": true,
-        "outputId": "9cf4bcd0-dff9-4898-b8e2-5b56dacc62ed",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "collapsed": true
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[102 104 106 108 110 112 114 116 118 120 122 124 126 128 130 132 134 136\n",
-            " 138 140 142 144 146 148 150 152 154 156 158 160 162 164 166 168 170 172\n",
-            " 174 176 178 180 182 184 186 188 190 192 194 196 198]\n"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -186,19 +155,19 @@
       "metadata": {
         "id": "4OPI4T88kqHQ",
         "collapsed": true,
-        "outputId": "88ae6057-8c33-4bce-b68b-bed05e7a82c8",
+        "outputId": "c81dee09-0b5e-42ad-9920-b89c76065c9a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "6.73 µs ± 1.65 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-            "710 ns ± 9.4 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+            "7.27 µs ± 2.33 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+            "840 ns ± 259 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
           ]
         }
       ]
@@ -231,7 +200,7 @@
       "metadata": {
         "id": "Od2fkhtcd_Ie"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -291,12 +260,12 @@
       ],
       "metadata": {
         "id": "qyKU01dsuYV6",
-        "outputId": "a7a993af-5930-4039-8ea0-9cea7c200c5c",
+        "outputId": "b5cded6c-3a70-433e-d351-698fa93b6fa0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +275,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 7
         }
       ]
     },
@@ -320,7 +289,7 @@
       "metadata": {
         "id": "sZpzRClhk8DJ"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -328,30 +297,30 @@
       "source": [
         "# Haga los cálculos aquí\n",
         "array_final = []\n",
-        "for i in range(len(lista_masas)//2):\n",
-        "  imf = IMF(lista_masas[2*i],lista_masas[2*i+1])\n",
+        "for i in range(len(lista_masas)-1):\n",
+        "  imf = IMF(lista_masas[i],lista_masas[i+1])\n",
         "  array_final.append(imf)\n",
         "array_final = np.array(array_final)\n",
         "np.sum(array_final)\n"
       ],
       "metadata": {
         "id": "Ov6W97KTlGLd",
-        "outputId": "f82db287-6fab-45d0-bcc4-ac3305ccb424",
+        "outputId": "3cc1f599-54a1-4bc6-dae2-4759b90e5921",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.7807009558580136"
+              "6.503428407627911"
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 9
         }
       ]
     },
